add model for rating && create a rating form to collect data && create a vie function that receives and  consumes data entered by the user && represent the data using html templates

--- a/awards/templates/search.html
+++ b/awards/templates/search.html
@@ -10,12 +10,12 @@
         {% for detail in details %}
         <div class="card" style="height: 50%; width: 30%; margin-top: 100px; margin-left: 30px; margin-bottom: 20px; box-shadow: 2px 2px 5px grey;">
             <div>
-                <img class="card-img-top" src="{{ detail.image.url }}"  style="  height: 200px;">
+                <a href="{% url 'rating' posts.name%}"><img class="card-img-top" src="{{ detail.image.url }}"  style="  height: 200px;"></a>
             </div>
             <div class="card-body">
                 <h4 class="card-title">{{detail.name}}</h4> 
                 <hr>
-                <a class="btn btn-sm btn-outline-info" href="{{ detail.url }}" style=""> View</a>
+                <a class="btn btn-sm btn-dark" href="{{ detail.url }}" style="color:yellow;"> View</a>
                 <p class="card-text ">
                 <span style="float:right">{{detail.created|date}}</span>
                 </p>
