--- a/awards/templates/index.html
+++ b/awards/templates/index.html
@@ -9,7 +9,7 @@
     <div class="row">
         {% for posts in all_posts %}
         <div class="card" style="height: 50%; width: 30%; margin-top: 50px; margin-left: 30px; margin-bottom: 20px; box-shadow: 2px 2px 5px grey;">
-                <a><img src="{{posts.image.url}}" class="card-img-top" style="  height: 200px;"></a>
+                <a href="{% url 'rating' posts.name%}"><img src="{{posts.image.url}}" class="card-img-top" style="height: 200px;"></a>
                 <div class="card-body">
                   <h5 class="card-title">{{posts.name}}</h5>
                   <hr>
