--- a/awards/templates/search.html
+++ b/awards/templates/search.html
@@ -8,9 +8,9 @@
         {% if details %}
         <h5>Found {{details.count}} project{{s}}</h5>
         {% for detail in details %}
-        <div class="card" style="height: 50%; width: 30%; margin-top: 100px; margin-left: 30px; margin-bottom: 20px; box-shadow: 2px 2px 5px grey;">
+        <div class="card" style="height: 50%;width: 30%;margin-top:100px;margin-left:30px;margin-bottom:20px;box-shadow:2px 2px 5px grey;">
             <div>
-                <a href="{% url 'rating' posts.name%}"><img class="card-img-top" src="{{ detail.image.url }}"  style="  height: 200px;"></a>
+                <a href="{% url 'rating' detail.name%}"><img class="card-img-top" src="{{ detail.image.url }}"  style="height: 200px;"></a>
             </div>
             <div class="card-body">
                 <h4 class="card-title">{{detail.name}}</h4> 
