--- a/awards/templates/registration/registration_form.html
+++ b/awards/templates/registration/registration_form.html
@@ -1,4 +1,3 @@
-{%extends "base.html"%}
 {% load bootstrap4 %}
 {% load crispy_forms_tags %}
 {% load static %}
@@ -15,7 +14,7 @@
                     <p style="color: red">{{ error }}</p>
     
                 {% endfor %}
-                <button type="submit" class="btn btn-outline-primary btn-sm">Sign up</button>
+                <button type="submit" class="btn btn-dark" style="">Sign up</button>
                 <hr>
             </form>
 
