--- a/awards/templates/projects/rating.html
+++ b/awards/templates/projects/rating.html
@@ -1,18 +1,18 @@
 {% extends 'base.html' %}
 {% load crispy_forms_tags %}
 {% block content %}
-<div class="container" style="margin-top:8%">
-
+<div class="container-fluid" id="overlay" style="background-image:url('https://s3.envato.com/files/169416072/01_62_16_Hacker_Hood_Displays_Dark.jpg'),opacity:0.6;">
+<div class="container">
     <div class="card">
-        <div class="view overlay" style="background-image:url({{ post.image.url }})">
-            <img class="card-img-top" style="visibility:hidden" width="100%"
-                 src="{{ post.image.url }}-/crop/1440x720/center/-/quality/lightest/" alt="">
+        <div class="view overlay">
+            <img class="card-img-top"  width="100%"
+                 src="https://s3.envato.com/files/169416072/01_62_16_Hacker_Hood_Displays_Dark.jpg" alt="">
             <p>
                 <div class="mask rgba-black-slight">
                     <div class="container">
                         <div class="row">
                             <div class="col-md-3"></div>
-                            <div class="col-md-6 d-flex flex-row mx-auto" style="margin-top:20%">
+                            <div class="col-md-6 d-flex flex-row mx-auto">
                                 {% for rating in post.ratings.all %}
                                 {% if forloop.counter is post.ratings.all.count %}
                                 <div id="design">{{ rating.design_average}}<br>
@@ -22,11 +22,11 @@
                                     <span class="rates">usability</span>
                                 </div>
                                 
- <div id="contente">{{ rating.content_average }}<br>
-                                
-     <span class="rates">content</span>
-                                
- </div>
+                                <div id="contente">{{ rating.content_average }}<br>
+                                                                
+                                    <span class="rates">content</span>
+                                                                
+                                </div>
                                 {% endif %}
                                 {% endfor %}
                             </div>
@@ -71,7 +71,9 @@
             </div>
 
             {% if rating_status %}
-            <h5>You have already voted</h5>
+            <div class="alert alert-success">
+                <strong>Success!</strong>You have already voted
+            </div>
             {% else %}
             {% if user.is_authenticated %}
             <form action="" method="post" enctype="multipart/form-data">
@@ -85,4 +87,6 @@
 
     </div>
 </div>
+</div>
+
 {% endblock %}
