--- a/awards/templates/search.html
+++ b/awards/templates/search.html
@@ -10,7 +10,7 @@
         {% for detail in details %}
         <div class="card" style="height: 50%;width: 30%;margin-top:100px;margin-left:30px;margin-bottom:20px;box-shadow:2px 2px 5px grey;">
             <div>
-                <a href="{% url 'rating' detail.name%}"><img class="card-img-top" src="{{ detail.image.url }}"  style="height: 200px;"></a>
+                <a href="{% url 'rating' detail.name%}"><img class="card-img-top" src="https://s3.envato.com/files/169416072/01_62_16_Hacker_Hood_Displays_Dark.jpg"  style="height: 200px;"></a>
             </div>
             <div class="card-body">
                 <h4 class="card-title">{{detail.name}}</h4> 
